src/snapshots/pg_sqlite_heap__tests__snapshot_after_update_and_delete.snap
---
source: src/lib.rs
expression: "rows_as_json(\"SELECT id, name FROM t ORDER BY id\")"
---
[
    {
        "id": 1,
        "name": "ALICE"
    },
    {
        "id": 3,
        "name": "carol"
    }
]
