src/snapshots/pg_sqlite_heap__tests__snapshot_index_scan_plan.snap
---
source: src/lib.rs
expression: "explain_text(\"SELECT name FROM ix WHERE id = 42\")"
---
Index Scan using ix_id on ix
  Index Cond: (id = 42)
