src/snapshots/pg_sqlite_heap__tests__snapshot_round_trip.snap
---
source: src/lib.rs
expression: "rows_as_json(\"SELECT id, name FROM t ORDER BY id\")"
---
[
    {
        "id": 1,
        "name": "alice"
    },
    {
        "id": 2,
        "name": "bob"
    },
    {
        "id": 3,
        "name": "carol"
    }
]
