src/snapshots/pg_sqlite_heap__tests__snapshot_savepoint_rollback.snap
---
source: src/lib.rs
expression: "rows_as_json(\"SELECT n, label FROM sp ORDER BY n\")"
---
[
    {
        "n": 1,
        "label": "kept"
    },
    {
        "n": 3,
        "label": "kept_too"
    }
]
