src/snapshots/pg_sqlite_heap__tests__snapshot_seq_scan_plan.snap
---
source: src/lib.rs
expression: "explain_text(\"SELECT * FROM t WHERE name = 'bob'\")"
---
Seq Scan on t
  Filter: (name = 'bob'::text)
