src/snapshots/pg_sqlite_heap__tests__snapshot_types_round_trip.snap
---
source: src/lib.rs
expression: "rows_as_json(\"SELECT * FROM mixed\")"
---
[
    {
        "b": 9999999999,
        "i": 1,
        "j": {
            "k": "v"
        },
        "r": 3.5,
        "t": "hello",
        "ba": "\\xdeadbeef",
        "bl": true,
        "arr": [
            1,
            2,
            3
        ]
    }
]
